# work-memory

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_EXPLANATION.md  CHANGELOG.md  COMPARISON_ANALYSIS.md  DEPLOYMENT.md  DEPLOYMENT_SCOPE.md  FINAL_SUMMARY.md  GIT_COMMIT_REPORT.md  INSTALL_TEST_REPORT.md  LICENSE  MEMORY.md  MEMORY_SYSTEM_ROADMAP.md  MODULES_CHECK_REPORT.md  PROJECT_COMPLETE.md  README.md  RELEASE_SUMMARY.md  TOOLS.md  VERIFICATION_REPORT.md  evolution-config.json  pyproject.toml  requirements.txt  setup.py  setup.sh
evolution/: .gitignore  FINAL_REVIEW_v3.5.md  FUNCTIONAL_INVENTORY_v3.5.1.md  IMPLEMENTATION_PLAN_v3.3.md  IMPLEMENTATION_REPORT_v3.3.md  IMPLEMENTATION_REPORT_v3.4.md  IMPLEMENTATION_REPORT_v3.5.md  MIGRATION_REPORT.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_REPORT_P0.md  P0_COMPLETE.md  README.md  ROADMAP_v4.md  collect-event.ts  inject-context.ts  reflect.ts
evolution-data/: config.json
evolution/capabilities/: test_agent.capability_evolution_20260315100442.json  test_agent.capability_evolution_20260315105350.json  test_agent.capability_evolution_20260315105407.json
evolution/core/: demo_memory_consolidation.py  init_knowledge_graph.py  knowledge_graph.py  memory_consolidation.py  memory_linking.py  test_all_modules.py
evolution/data/: events.jsonl  index.json  kg_export_test.json  memory_links.db  (+9 more)
examples/: basic_usage.py  example_usage.py
integration/: FUNCTION_REVIEW.md  README.md  ROLLBACK_REPORT.md  WORK_MEMORY_GUIDE.md  WORK_MEMORY_INTEGRATION.md  evolution_config.json  evolving_agent.py  fix4_data_write.py  fix5_add_event_types.py  step2_tune_config.py  step3_monitor.py  verify_engine_status.py  work_memory.py
memory/: README.md
scripts/: migrate_data.py  migrate_memory.py
skills/: install.sh
tests/: test_work_memory.py
work-memory-evolution/: .gitignore  README.md
work-memory-v1/: README.md  setup.py
work-memory-v2/: .gitignore
work_memory/: __init__.py
(+117 files in other folders)
